--- a/down.html
+++ b/down.html
@@ -210,7 +210,7 @@
                     var myColor;
                     // TO-DO ::
                     // insert condition isUnlocked(aboveID[s]) here
-                    if (true) {
+                    if (false) {
                       myColor = 'rgb(0,250,0)';
                       // Create the URL. Encode satellite ID for the next page to draw him. Also apend nearby sattelites that above detected.
                       // Encoded parameter num is the number of neighboring satelites that are passed. The recepient page will use this number to store the
