--- a/gyro.html
+++ b/gyro.html
@@ -14,11 +14,12 @@
 	<div id="content-div">
             <h1 class="d"></h1>
             <p class="observation-info"></p>
-            <pre class="orientation_sensors"></pre>
+            <p class="orientation_sensors"></p>
             <h1 class="found-banner"></h1>
+            <div id="qrcode"></div>
 	</div>
         <script src="https://rawgit.com/adtile/Full-Tilt/master/dist/fulltilt.min.js" type="text/javascript"></script>
-
+        <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
         <script src="gyro.js" type="text/javascript"></script>
         <script src="satvisibility.js" type="text/javascript"></script>
         <script>
